--- a/other/github-activity.html
+++ b/other/github-activity.html
@@ -12,7 +12,7 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+ <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -59,18 +59,18 @@
 
       <p><H3>Github Screenshots: <br></H3>
         <b>Branch dev: <br></b>
-        <b><img src="/images/dev12.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev11.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev10.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev9.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev8.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev7.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev6.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev5.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev4.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev3.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev2.png" width="1035" alt="" /></b>
-        <b><img src="/images/dev1.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev12.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev11.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev10.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev9.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev8.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev7.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev6.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev5.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev4.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev3.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev2.png" width="1035" alt="" /></b>
+        <b><img src="/images/github/dev1.png" width="1035" alt="" /></b>
         
         <b>Branch p3: <br></b>
         <b><img src="/images/p2_commit_6.jpg" width="1035" alt="" /></b>
