--- a/p3/group/mingxuan.html
+++ b/p3/group/mingxuan.html
@@ -25,7 +25,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
@@ -40,7 +40,7 @@
         </header>
 
         <h2>Mingxuan Zhou</h2>
-        <img src="/images/mingxuan-zhou.jpg" width="100px" height="120px" />
+        <img src="/images/group/mingxuan-zhou.jpg" width="100px" height="120px" />
         <p>s3798529@student.rmit.edu.au</p>
         <p>
           <b>Background and passion: <br /> </b> I am an overseas student from
