--- a/p3/group/yi.html
+++ b/p3/group/yi.html
@@ -27,7 +27,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
@@ -42,7 +42,7 @@
         </header>
 
         <h2>Yi Yang</h2>
-        <img src="/images/yi-yang.jpg" width="200px" height="250px" />
+        <img src="/images/group/yi-yang.jpg" width="200px" height="250px" />
         <p>s3798529@student.rmit.edu.au</p>
         <p>
           <b>Background and passion: <br /> </b>I am an international student from China. This is my third year of being a student of computer science and IT. At the beginning, I chose IT for my major because I was interested in developing games. However, after two and half a year of study, I find that many aspects are worth learning such as data analysis and algorithm design. 
