--- a/p3/processes.html
+++ b/p3/processes.html
@@ -13,6 +13,7 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css" />
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css" />
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
 </head>
 
@@ -21,13 +22,67 @@
     <div id="headerDiv"></div>
 
     <!-- Main -->
-    <section id="main">
-111111111111111111111
+    <section id="main" class="container w-75">
+        <h1>PROJECT PROCESSES
+        </h1>
+        <h2>What we have learned</h2>
+        <p>The new tools and technologies we have learned have been mentioned in another section, so this part we will
+            introduce what we have learned about the performance as a team in particular. In view of the fact that it is
+            the first time for some members to complete the project as a team, of course, everyone can learn about the
+            performance during this semester. As a team, we cooperate well together in general. Most members are willing
+            to listen to the opinions of others and actively accept others’ suggestions. In the first assignment, we
+            made a general arrangement of the project, and then in the second one, we made detailed supplements to the
+            plan of the project, specific to what tasks each person should complete each week.
+        </p>
+        <p>What works well in the group is that members can take the initiative and complete the task on time and open
+            it to GitHub and update the Trello cards to let others know the progress of the tasks. However, what hasn’t
+            worked well is that Gia always needs other people to assign work and will not take the initiative to
+            complete the task. At the same time, he also needs the supervision of others to finish the task on time. Not
+            only that, he is not willing to accept the opinions of others, so the efficiency of communication with him
+            is always low because he may not be good at cooperating with others. Even so, others tried their best to
+            communicate with him and did extra work which he can not do well to make sure the project is in progress and
+            the project finished well as expected.
+        </p>
+
+        <h2>Lecturer, Mentor and communication</h2>
+        <p>We have meetings with the mentor every week in which we showed our progress, achievements and the questions
+            then he gave us his suggestions and told us which parts could have an improvement. Specifically, Trevor
+            helped us a lot on designing the website and mentioned that we lost the author on the recipe detail page,
+            furthermore, he reminded us to mention about the feature creeps in the report when we did that without
+            realising. On the other hand, the lecturer guided us in setting the project topic. As mentioned before, our
+            project is based on Gia’s Intro to IT assignment but this time we have to consider the achievements of the
+            functions and its feasibility. At the beginning, we set the posting recipes as the key feature of the
+            website but Dr.B suggested that we should do something unique such as achieve a different searching system
+            as the key point. We agreed and listened to his advice.
+        </p>
+        <p>The group holds weekly meetings as required, during which, every member firstly shows what have done of
+            previous tasks and others helped check and review the task then assigns new tasks for next week and sets a
+            due date for them. At other times, most of the members could complete the work independently. Otherwise, if
+            we are available, we will hold extra meetings to do oral communication directly, if not, we will post
+            messages in general channels. The team will also review an additional time before the meeting with the
+            mentor to make sure that we can show our progress properly. At the beginning of the semester, we usually
+            have a weekly meeting on Monday or Tuesday, but later the regular meeting was changed to Friday because we
+            have a meeting with the mentor on Wednesday and before that, we always hold a meeting that would not be
+            recorded, in order to ensure the frequency and the quality of the meeting we change it to Friday.</p>
+        <h2>aspect of organising a project and hindsight</h2>
+        <p>For my perspective, the most aspect of organising a project of this nature is to learn the project management
+            and learn to work as a team because in the real industry people have to work together, it is a challenge for
+            a group of beginner to work in this way but it is also a excellent chance for us to improve not only the
+            coding skills but also the collaborating skill. If I have a chance to start the project again, I hope I can
+            make more contributions to code and spend more time learning more deeply on Spring boot and Mybatis, because
+            after all as a programmer, code ability is the most important.</p>
+        <h2>advice</h2>
+        <p>My advice for a group about to embark on a similar project is that it is inevitable that you will encounter
+            teammates who are not actively completing the task or difficult to communicate with. It is better to stop
+            loss in time and the wrong approach if it is possible. Otherwise, other team members should jointly decide
+            whether the non-working person should stay in the group. It might happen the same in the real industry,
+            however, the boss will consider it at that time. So for those who will participate in a similar project,
+            members have their rights to keep only those who are willing to work hard.</p>
     </section>
 
     <!-- Footer -->
-       <footer class="navbar-fixed-bottom">
-            <div id="footerDiv"></div>
+    <footer class="navbar-fixed-bottom">
+        <div id="footerDiv"></div>
     </footer>
 
     <script src="/assets/js/common.js"></script>
