--- a/other/trello-task.html
+++ b/other/trello-task.html
@@ -25,7 +25,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
 
   <body>
