--- a/p3/group/yingjian.html
+++ b/p3/group/yingjian.html
@@ -26,7 +26,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
@@ -41,7 +41,7 @@
         </header>
 
         <h2>Yingjian Di</h2>
-        <img src="/images/yingjian-di.jpg" width="200px" height="240px" />
+        <img src="/images/group/yingjian-di.jpg" width="200px" height="240px" />
         <p>s3798345@student.rmit.edu.au</p>
         <p>
           <b>Background and passion: <br /> </b>students from China. Now it's my   
