--- a/p3/group/zhihao.html
+++ b/p3/group/zhihao.html
@@ -25,7 +25,7 @@
       href="https://unpkg.com/bootstrap-table@1.17.1/dist/bootstrap-table.min.css"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
+   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/roboto" type="text/css"/> <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
@@ -40,7 +40,7 @@
         </header>
 
         <h2>Zhihao Liang</h2>
-        <img src="/images/zhihao-liang.jpg" width="200px" height="200px" />
+        <img src="/images/group/zhihao-liang.jpg" width="200px" height="200px" />
         <p>s3798366@student.rmit.edu.au</p>
         <p>
           <b>Background and passion: <br /> </b>  I am an International student from China. I have learned some frameworks from the Internet, like spring boot, react and so on. I am interested in web programming and database management.
